Fix ugly line break in master view

--- a/src/css/scrumonline.css
+++ b/src/css/scrumonline.css
@@ -77,6 +77,7 @@ div.card-container {
 div.card-container h2 {
   font-weight: bold;
   width: 100px;
+  min-height: 70px;
   text-align: center;
 }
 @media(min-width: 992px){
